# Proyecto2-BMC-Alineamientos

./: .gitignore  README  configure.ac
Secuencias/: ADN4000v.txt  ADN4000w.txt  KbandW.txt  PROT2201  PROt13334V  Prot1500V  Prot1500W  Prot3000V  Prot3000W  Prot3Cod600.txt  prot200V  prot200W
Subtitution Matrixes/: Blosum 45 sorted and complete.txt  Blosum 62 sorted and complete.txt  Blosum 80 sorted and complete.txt  PAM250 sorted and complete.txt  PAM70 sorted and complete.txt
src/: AfterMatrixFilling.c  AfterMatrixFilling.h  AlignmentOptions.c  AlignmentOptions.h  BenchmarkSupport.c  BenchmarkSupport.h  Cell.c  Cell.h  CellFillingSupport.c  CellFillingSupport.h  FillingAlgorithms.c  FillingAlgorithms.h  Globals.c  Globals.h  Gridview.c  Gridview.h  Island.c  Island.h  Makefile.am  SubstitutionMatrixes.c  SubstitutionMatrixes.h  TestingFunctions.c  TestingFunctions.h  main.c  proyecto2-bmc-alineamientos.c  proyecto2-bmc-alineamientos.h  proyecto2_bmc_alineamientos.callbacks.c  proyecto2_bmc_alineamientos.handlers.c  proyecto2_bmc_alineamientos.handlers.h  proyecto2_bmc_alineamientos.ui
